cluster/rancher/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: cattle-system
spec:
  selector:
    app: rancher
  ports:
    - name: https
      port: 443
      targetPort: https
