cluster/rancher/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: rancher.memp.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: rancher
                port:
                  number: 443
